--- a/package.json
+++ b/package.json
@@ -9,8 +9,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.13.3",
+    "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^1.4.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.7",
+    "react-router-dom": "^6.11.2",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
+    "redux-toolkit": "^1.1.2",
+    "sass": "^1.62.1",
+    "swiper": "^9.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
