--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.3",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
@@ -18,16 +19,20 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.11.2",
+    "react-slick": "^0.29.0",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "redux-toolkit": "^1.1.2",
     "sass": "^1.62.1",
+    "slick-carousel": "^1.8.1",
     "swiper": "^9.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/react-slick": "^0.23.10",
     "@vitejs/plugin-react": "^3.1.0",
+    "node-sass": "^9.0.0",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
   }
