--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.3",
     "@reduxjs/toolkit": "^1.9.5",
+    "@types/jwt-decode": "^3.1.0",
     "axios": "^1.4.0",
     "formik": "^2.4.1",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.7",
