--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@types/jwt-decode": "^3.1.0",
     "axios": "^1.4.0",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "formik": "^2.4.1",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
@@ -28,6 +31,7 @@
     "redux-toolkit": "^1.1.2",
     "sass": "^1.62.1",
     "slick-carousel": "^1.8.1",
+    "stripe": "^12.9.0",
     "swiper": "^9.3.2",
     "yup": "^1.2.0"
   },
