--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "formik": "^2.4.1",
+    "i18next": "^23.2.0",
+    "i18next-browser-languagedetector": "^7.0.2",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.0.0",
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.11.2",
     "react-slick": "^0.29.0",
