--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "axios": "^1.4.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "emailjs-com": "^3.2.0",
     "express": "^4.18.2",
     "formik": "^2.4.1",
+    "google": "^2.1.0",
     "i18next": "^23.2.0",
     "i18next-browser-languagedetector": "^7.0.2",
     "jwt-decode": "^3.1.2",
+    "maps": "^0.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.0.0",
